--- a/backendSantander/src/main/resources/application.yml
+++ b/backendSantander/src/main/resources/application.yml
@@ -18,5 +18,5 @@ spring:
       ddl-auto: none
 
 application:
-  description: Projeto criado para o bootcamp DIO - Santander
-  version: 1.0
+  description: Projeto criado para o Bootcamp DIO - Santander
+  version: 2.0
